--- a/mamazon/templates/mamazon/home.html
+++ b/mamazon/templates/mamazon/home.html
@@ -334,6 +334,9 @@
     </div>
     <h4>Latest Products </h4>
     <ul class="thumbnails">
+
+        {% block products %}
+        {% endblock products %}
         
     </ul>
 </div>
